added cross validation

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ eli_strategy.py
 auth.txt
 
 # Ignore local configuration
-settings.ini
+bitraider/settings.ini
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
